# smartiko_test

./: README.md  info.txt
myserver/: CMakeLists.txt  dbworker.cpp  dbworker.h  main.cpp  mymqttsubscriber.cpp  mymqttsubscriber.h
nonqt01/: CMakeLists.txt  dataemulator.cpp  dataemulator.h  jsonutils.cpp  jsonutils.h  main.cpp  mymqttpublisher.cpp  mymqttpublisher.h  paho_mqtt.cpp  paho_mqtt.h
release/: copy_so.sh  libpaho-mqtt3a.so.1  myserver  run.sh  run1.sh  run2.sh
release/docker_nonqt01/: dockerfile  libpaho-mqtt3as.so.1  run1.sh
release/docker_server/: dockerfile  libpq.so.5  myserver  run2.sh
